required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------
- AGG: pixel level simplification for line and polygon shapes (#2381)

- fixed blue/green color swapping for space delimited strings bound to an attribute. (bug 2378)

- don't remove points that are checked as being colinear (#2366)

- add initial(?) support for reading a pie chart's size from an attribute (#2136)

- don't bail out in map parsing if the outputformat had to be modified
  (bug #2321)

- use a renderer agnostic legend icon drawing function which switches
  to the GD or AGG specific one depending on the outputformat (#2348)

- AGG: switch alpha buffer when drawing query layer

- Fixed legend icons not drawing when using maxscaledenom

- AGG: fix embedded scalebar rendering when using postlabelcache (#2327)

- AGG: allow for fast and aliased rendering of simple lines and polygons
  thick lines and patterns (i.e. dashes)aren't supported.
  this is triggered when the symbol is of TYPE SYMBOL *and* its ANTIALIAS is off
  (wating to find a better solution to trigger this).

- AGG: the pixmap of pixmap symbols is now cached in an agg-compatible state the first
  time it is accessed. this avoids rereading and retransforming it each time that 
  symbol is used.

- AGG: the imageObj now stores in what state it's alpha channel is in. The number of
  msAlphaGD2AGG/AGG2GD calls is now reduced, but most importantly each of these calls
  is usually just a check for this state and does no computation.
  
- AGG: fixed a few artifacts in embedded legend rendering on rgba images.

- Fixed modulus operator in the parser (#2323)
